sourceCompatibility = 1.8
dependencies {
    implementation 'org.json:json:20230227'
}
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

sourceSets.main.java.srcDirs = [ "src/" ]

eclipse.project.name = appName + "-core"
